// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Basic should match the snapshot 1`] = `
<div>
  <div
    aria-labelledby="brd-instance3107550171-4"
    aria-live="polite"
    class="brd-c-hzAqKw brd-c-hzAqKw-lcPgHC-size-lg brd-c-hzAqKw-dDDEqJ-variant-info"
    role="status"
  >
    <div
      class="brd-c-bZNrxE"
    >
      <div
        class="brd-c-deZXRM"
      >
        <div
          class="brd-c-jeVcRd"
          role="presentation"
        >
          <i
            data-testid="mock-icon-Info"
          />
        </div>
        <div
          class="brd-c-fNvXDc"
          id="brd-instance3107550171-4"
        >
          <div
            class="brd-c-ehEcEk"
          >
            OpenDoc
          </div>
          <div
            class="brd-c-jUtCOJ"
          >
            A Possibility in the Computing World Suppressed by Steve Jobs.
          </div>
        </div>
        <button
          aria-label="Dismiss Button"
          class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-lKjfQ-size-md brd-c-PJLV"
          role="button"
          tabindex="0"
          type="button"
        >
          <i
            data-testid="mock-icon-Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert MessageOnly should match the snapshot 1`] = `
<div>
  <div
    aria-labelledby="brd-instance3107550171-5"
    aria-live="assertive"
    class="brd-c-hzAqKw brd-c-hzAqKw-dzGVlg-size-sm brd-c-hzAqKw-dznTNE-variant-error"
    role="alert"
  >
    <div
      class="brd-c-bZNrxE"
    >
      <div
        class="brd-c-deZXRM"
      >
        <div
          class="brd-c-jeVcRd"
          role="presentation"
        >
          <i
            data-testid="mock-icon-CloseOne"
          />
        </div>
        <div
          class="brd-c-fNvXDc"
        >
          <div
            class="brd-c-jUtCOJ"
            id="brd-instance3107550171-5"
          >
            Oops! Something went wrong.
          </div>
        </div>
        <button
          aria-label="Dismiss Button"
          class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-lKjfQ-size-md brd-c-PJLV"
          role="button"
          tabindex="0"
          type="button"
        >
          <i
            data-testid="mock-icon-Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert WithAction should match the snapshot 1`] = `
<div>
  <div
    aria-labelledby="brd-instance3107550171-6"
    aria-live="assertive"
    class="brd-c-hzAqKw brd-c-hzAqKw-lcPgHC-size-lg brd-c-hzAqKw-enADiq-variant-warning"
    role="alert"
  >
    <div
      class="brd-c-bZNrxE"
    >
      <div
        class="brd-c-deZXRM"
      >
        <div
          class="brd-c-jeVcRd"
          role="presentation"
        >
          <i
            data-testid="mock-icon-Caution"
          />
        </div>
        <div
          class="brd-c-fNvXDc"
          id="brd-instance3107550171-6"
        >
          <div
            class="brd-c-ehEcEk"
          >
            Complete your profile
          </div>
          <div
            class="brd-c-jUtCOJ"
          >
            Please complete your profile to allow us recommending personalized content to you.
          </div>
        </div>
        <div
          class="brd-c-lkAHsY"
        >
          <button
            class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-foEQdY-btnType-primary brd-c-dsuUsp-lKjfQ-size-md"
            role="button"
            tabindex="0"
            type="button"
          >
            <span>
              View details
            </span>
          </button>
        </div>
        <button
          aria-label="Dismiss Button"
          class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-lKjfQ-size-md brd-c-PJLV"
          role="button"
          tabindex="0"
          type="button"
        >
          <i
            data-testid="mock-icon-Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
